Changelog
=========


2.3.4 (unreleased)
------------------

- Reactivate the set_roles_on_distinct_parent in the localroles setter.
  Because to edit(external_edit) related documents of a task it's necessary to have permissions on the dossier.
  [phgross]


2.3.3 (2012-03-12)
------------------

- Fixed CompleteSuccessorTaskReceiveDelivery View: Fire the addedEvent for every
  copied document, so that it generates a inital version of the document.
  Issue #1446 Datei eines Dokuments wird beim Transport einer mandantenuebergreifenden Aufgabe nicht kopiert
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1446/
  [phgross]


2.3.2 (2012-03-08)
------------------

- Removed console.log statemant in js, to avoid ie problems.
  [phgross]

- Task overview: Fixed AttributError if document_date not set
  [lgraf]

- Taskoverview: Add date of completion to the main attributes.
  Issue #1440 Release 2.3 Aufgabe: Erledigungsdatum fehlt im Overview
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1440
  [phgross]

- Fixed CompleteSuccessorTaskForm:
  - Fixed condition "relation allready exists".
  - Append the relation on response also when the releation has been allready exist.
  [phgross]


2.3.1 (2012-03-02)
------------------

- Fixed Typoerror in translation.
  [phgross]


2.3 (2012-03-01)
----------------

- Accept Forwarding: Allways reset the is_only_assign flag, when start accepting.
  Issue #1387 Mandantenuebergreifende Weiterleitung: Wizards erstellen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1387/
  [phgross]

- Adjust some translations.
  [phgross]

- Fixed completing task process:
  - Add relations for seleted documents from the dossier.
  - Add the documents also in the local response not only on the remote task.
  Issue #1344 Aufgabe erledigen bzw. abschliessen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1344/
  [phgross]
